# harmoniq-plus

./: .gitignore  notes.md
backend/: Cargo.toml  backend-setup.md
backend/db/: docker-compose.yaml  init.sql
backend/src/: main.rs
backend/src/data/: mod.rs
backend/src/handlers/: mod.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  scoring.js
frontend/src/pages/: AdminPanel.tsx  AuthContext.tsx  Challenges.tsx  DailyQuestionnaire.tsx  DashboardPage.tsx  LoginPage.tsx  Map.tsx  QuestionsHealth.tsx  RegisterPage.tsx  WelcomePage.tsx  YourGoals.tsx  scoringConfig.js
frontend/src/routes/: AdminRoute.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: ChallengesS.css  challengesPool.ts  generateDailyChallenges.ts
