[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart", "macros"] }
dotenv = "0.15.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "json", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tower-http = { version = "0.3", features = ["cors"] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
hickory-resolver = "0.25.2"
